public-subnets.tf
resource "aws_subnet" "public" {
  count      = "${length(local.az_names)}"
  vpc_id     = aws_vpc.my_vpc.id
  cidr_block = "${cidrsubnet(var.vpc_cidr, 8, count.index)}"
  availability_zone ="${local.az_names[count.index]}"
  map_public_ip_on_launch = true

  tags = {
    Name = "publicsubnet-${count.index + 1}"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    Name = "rdemo-igw"
  }
}

resource "aws_route_table" "prt" {
  vpc_id = aws_vpc.my_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "demoprt"
  }
}

resource "aws_route_table_association" "pub_sub_association" {
  count      = "${length(local.az_names)}"
  subnet_id      = local.pub_sub_ids[count.index]
  route_table_id = aws_route_table.prt.id
}
